# bim-viewer

./: BFB3.tmp  Dockerfile  converter.py  functions.py  main.py  models.py  pyproject.toml  sensor_data.py
converted/xml/: basic.xml  basic2.xml
unused/: config.json  converter.py  converter_client.py  revit_script.py
unused/IFCExporter/: Exporter.cs  IFCExporter.csproj  IFCExporter.sln  Program.cs
