[tool.poetry]
name = "bim-viewer"
version = "0.1.0"
description = "BIM"
authors = ["Takacs Balazs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.31"
psycopg = "^3.2.1"
python-multipart ="^0.0.18"
ifcopenshell ="^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"